Fix GitHub Pages deployment: Upload only built course directories
- Changed upload path from entire repository to only course directories
- This ensures GitHub Pages serves the built HTML files correctly
- Fixes 404 errors when accessing slide URLs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,10 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: |
+            machine-learning/
+            data-analytics/
+            data-visualization/
 
   deploy:
     environment:
