--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Debug: List files
+        run: |
+          echo "=== Repository structure ==="
+          find . -name "*.md" -type f
+          echo "=== Theme files ==="
+          ls -la theme/
+          echo "=== Course directories ==="
+          ls -la machine-learning/ data-analytics/ data-visualization/
+        
       - name: Build all slide decks
         run: npm run build:all
         
