Refactor: Separate PDF generation from core build process
- Removed PDF generation from main build workflow
- Created separate PDF workflow for on-demand generation
- Added local PDF generation script (npm run pdf:local)
- Core system now focuses on interactive slides deployment
- PDFs can be generated manually or via version tags

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vendor": "node scripts/vendor-assets.js",
     "build:all": "node scripts/build-all.js",
     "pdf:all": "node scripts/pdf-all.js",
+    "pdf:local": "npm run build:all && npm run pdf:all",
     "preview": "npx reveal-md --help",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
