docs: Update documentation to reflect external PDF generator approach
- Remove WordPress integration references from package.json
- Update README.md to clarify PDF generation is external/on-demand
- Fix slides_specs.md to use current course names and structure
- Update .gitignore to track index.html files for GitHub Pages
- Align all documentation with separated PDF workflow architecture

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@ yarn-error.log*
 **/plugin/
 **/css/
 **/_assets/
-**/index.html
 **/slides.html
 **/deck.pdf
 **/favicon.ico
+
+# Note: index.html files are tracked for GitHub Pages deployment
 
 # OS files
 .DS_Store
